<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bhakti.electricityapp.UserHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button9"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:text="@string/ViewBill" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button"
            android:layout_alignRight="@+id/button"
            android:layout_centerVertical="true"
            android:text="@string/History" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignRight="@+id/textView5"
            android:layout_below="@+id/button9"
            android:layout_marginTop="17dp"
            android:text="@string/RegisterComplaint" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button12"
            android:layout_alignRight="@+id/button12"
            android:layout_below="@+id/button12"
            android:layout_marginTop="41dp"
            android:text="@string/Notifications" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="92dp"
            android:text="@string/Welcome"
            android:textSize="@android:dimen/app_icon_size" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
