<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bhakti.electricityapp.Registration">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:background="@drawable/background_gradient"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="120dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText"
            android:layout_width="376dp"
            android:layout_height="46dp"
            android:hint="@string/UserName"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="30dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="376dp"
        android:layout_height="46dp"
        android:hint="@string/CustomerID"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="202dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contact"
        android:inputType="textPersonName"
        android:maxLength="10" />

        <Button
            android:id="@+id/button1"
            android:layout_width="189dp"
            android:layout_height="59dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="48dp"
            android:text="@string/Register"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="316dp" />




    </LinearLayout>

<ImageView
    android:id="@+id/imageVIew"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="5dp"
    android:layout_centerHorizontal="true"
    android:src="@mipmap/ic_launcher"
    android:background="@drawable/background_white"
    android:padding="5dp"
    android:layout_width="70dp"
    android:layout_height="70dp" />

<TextView
    android:textSize="20sp"
    android:textColor="#FFF"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/imageVIew"
    android:text="@string/SignUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
</RelativeLayout>

