<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.bhakti.electricityapp.Complaint"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/mainback"
        android:gravity="center">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/SelectCom"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp" />


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/SendComplaint" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Or"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText7"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/SelectCom2"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/button16"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/WriteHere"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button14"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button14"
        android:layout_marginBottom="27dp"
        android:text="@string/SendComplaint" />
</RelativeLayout>
